form added and final versions revised for all other pages

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Personal Website</title>
-    <link rel="stylesheet" href="personalwebsite.css" />
-    <script src="personalwebsite.js"></script>
+    <title>LILIANA CONTRERAS</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="javascript.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +15,6 @@
   </head>
   <body>
     <header>
-      <!--style the list so that there is no dot and the words are in one row at the end-->
       <a href="index.html" id="name">LUCON PROGRAMMING</a>
       <ul>
         <li>
@@ -27,6 +26,9 @@
         <li>
           <a href="portfolio.html"><strong>EXPERIENCE</strong></a>
         </li>
+        <li>
+          <a href="form.html"><strong>CONTACT</strong></a>
+        </li>
       </ul>
     </header>
     <!--I'm gonna insert an image to be the background of this section and hopefully with the transparent footer and header it will encompass the page.
@@ -34,7 +36,6 @@
 
     <div id="hiddenContent" class="grid-container">
       <div id="content1" class="main1">
-        <!--<img class="slides" src="https://volcano.si.edu/gallery/photos/GVP-05525.jpg" alt="Pico de Orizaba Volcano"> -->
         <h1>INSPIRE WITH ME</h1>
         <h3>Let's Make A Difference</h3>
         <p>
@@ -64,7 +65,6 @@
       </div>
 
       <div id="content2" class="main2">
-        <!-- <img class="slides" src="https://media.tacdn.com/media/attractions-splice-spp-674x446/06/75/bc/52.jpg" alt="a colorful street in Puebla, Mexico">-->
         <h1>SUCCESS IS NO ACCIDENT</h1>
         <h3>Perservering Since 1994</h3>
         <p>
