--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Personal Website</title>
-    <link rel="stylesheet" href="personalwebsite.css" />
-    <script src="personalwebsite.js"></script>
+    <title>LILIANA CONTRERAS</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="javascript.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,6 +25,9 @@
         </li>
         <li>
           <a href="portfolio.html"><strong>EXPERIENCE</strong></a>
+        </li>
+        <li>
+          <a href="form.html"><strong>CONTACT</strong></a>
         </li>
       </ul>
     </header>
@@ -103,6 +106,3 @@
   </body>
 </html>
 
-<!--note to self - make sure to fill in with an actual screenshot-->
-<img src="screenshot" alt="project1 screenshot" />
-<a href="linktomywebsite.org">project1.org</a>
