added images and links

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html" id="name">LUCON PROGRAMMING</a>
+      <a href="index.html" id="name">LILIANA CONTRERAS</a>
       <ul>
         <li>
           <a href="index.html"><strong>RELAX</strong></a>
@@ -93,20 +93,20 @@
         </p>
       </div>
     </div>
-
+    <div class="bottomnav">
+      <ul>
+        <li>
+          <a href="#content1"><strong>INTERESTS</strong></a>
+        </li>
+        <li>
+          <a href="#content2"><strong>ENTICE</strong></a>
+        </li>
+      </ul>
+    </div>
     
     <footer>
-      <div>
-        <ul>
-          <li>
-            <a href="#content1"><strong>INTERESTS</strong></a>
-          </li>
-          <li>
-            <a href="#content2"><strong>ENTICE</strong></a>
-          </li>
-        </ul>
-      </div>
-      <p><strong>LUCON PROGRAMMING</strong></p>
+     
+      <p>EST. 2023 <strong>LUCON PROGRAMMING</strong> Professional Web Development aimed at delivering enticing websites</p>
     </footer>
   </body>
 </html>
