--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html" id="name">LUCON PROGRAMMING</a>
+      <a href="index.html" id="name">LILIANA CONTRERAS</a>
       <ul>
         <li>
           <a href="index.html"><strong>RELAX</strong></a>
@@ -33,29 +33,27 @@
     </header>
 
     <form action="">
-      <h1 style="font-size: 145px; margin-bottom: 10px;">Contact Me</h1>
+      <h1 style="font-size: 145px; margin-bottom: 10px">Contact Me</h1>
       <div>
         <label for="name">
           Name/Company<br />
-          <input class="box" type="text" name="name"/>
+          <input class="box" type="text" name="name" />
         </label>
       </div>
-      <div >
+      <div>
         <label for="email">
           Email<br />
-          <input class="box" type="email" name="email"/>
+          <input class="box" type="email" name="email" />
         </label>
       </div>
-      <div >
-        <label for="message">
-          Brief Message<br />
-          </label>
+      <div>
+        <label for="message"> Brief Message<br /> </label>
         <textarea name="message" id="" cols="36" rows="10"></textarea>
       </div>
       <button onclick="myFunction()">SUBMIT</button>
     </form>
     <footer>
-        <p><strong>LUCON PROGRAMMING</strong></p>
+      <p>EST. 2023 <strong>LUCON PROGRAMMING</strong> Professional Web Development aimed at delivering enticing websites</p>
     </footer>
   </body>
 </html>
