--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html" id="name">LUCON PROGRAMMING</a>
+      <a href="index.html" id="name">LILIANA CONTRERAS</a>
       <ul>
         <li>
           <a href="index.html"><strong>RELAX</strong></a>
@@ -36,72 +36,72 @@
 
     <div id="hiddenContent" class="grid-container">
       <div id="content1" class="main1">
-        <h1>PROJECT 1</h1>
+        <h1>THE ZOO PROBLEM</h1>
 
         <p>
           Brief description goes here about my project and how amazing it was
           and how quick and efficiant I was to make it.
         </p>
         <!--note to self - make sure to fill in with an actual screenshot-->
-        <img src="screenshot" alt="project1 screenshot" />
-        <a href="linktomywebsite.org">project1.org</a>
+        <img src="https://lh3.googleusercontent.com/pw/ADCreHe-UDhyHxyrWqyToUJxlcvpYTIoZPLIl5W7ZUEWYsA-9qUc8LvWe4ueoxiayWH15wV8kjfwohwA6RKDVzu0NweLk5Ho4uY45wmuzC9V6erKU6Zfn46ffYdgOoCO_u8zII1iEKueBmXntQpFLxjeyNB5QhrlmgbwK7wE_RIxYim9fyMT3itMooBjZAz_Qo8l3XJiASFrHio0eq5uI8V57qO6ed5mKXNz8rMuPFM1_2N4IuJTkhS-3aBO5NxDbAV3cwC2Z4Hw3BjyGSEUx1y3B7YWAOcHX3olL0-ZSGmSAF8xz0YFA6biMdCv-mCDjPp4egKg-59OuuhU-AMp_bVs1TyGQouGVRFXe2jR5UKPEh4RRztgjoLx_PZKkN5vxLHKlUN_znTkJd_g-NQOlTGuimrNJv23c3wBKdQ-DhK4aPBEJWvwIf4cFygc7r8kZUv-AT6FmbAIJvzhSb-S-6j8NUObyo-uLajOLS8cDowYJN9oAFViUfxHUztgvQZGx5DJhW0zv43E8LjWjAM_NhYSqLlcAqnriEzsvt1Whnj8KvgVIl-cBNPjWayz8U4WcVYeTusLXXFYmNaqZmSOhwR1hAT90Tf8x7epD-WgRI8HOd1pMmkyFl3Bwx6FWLDB8ebHzGJB4kzYUavQ-X--vDtscfnGy8hKyhT6lb6QQr_RFmIOjnxoyLjAifk8RBUOs2DGJ6-nppcNBdPAhXLoSbesS4u47riqIOwpmIXfjwkgqOi02lyedrnoQN7I68DXjsXM68SsWkm9vm8OqwFLNh9dvDBF36B76CwMjYWVjky_kzmX6pZFPMwedtQySdrVadiQJQKx5HqggEiMJZfU80o1oCjr22BU_B40AJyTuFlq710zFRHqkG7_BYsZEsaES3kglyZWvR9QcjEACkqbSw1Qzgs8OeI=w1551-h775-s-no-gm?authuser=0" alt="The Zoo Problem" />
+        <a href="projectsforportfolio/thezooproblem.html">project1.org</a>
       </div>
 
       <div id="content2" class="main2">
-        <h1>PROJECT 2</h1>
+        <h1>THE GROCERY LIST</h1>
 
         <p>
           Brief description goes here about my project and how amazing it was
           and how quick and efficiant I was to make it.
         </p>
         <!--note to self - make sure to fill in with an actual screenshot-->
-        <img src="screenshot" alt="project1 screenshot" />
-        <a href="linktomywebsite.org">project1.org</a>
+        <img src="https://lh3.googleusercontent.com/pw/ADCreHcJLd6QD3HWKMivzo12cYJdQmRZtiWX3dNkPXDtsi8Rmss_-W5e-UKPheDgG2_jPdsvtMAFvVFo2XHY_oCFf0B55OmW0ZUhd7PLJml7DU2WbOpMGwjdUgdsZR2Y7XIzOSggtOmTuKsxaCL-25APGZrYSTokG7zHThj007XHjMvqc1P_9zPUyyWdQpXsnfuRak9vkXUAn1KSHqLs1HXrwV3Kthc5ox8cUIozBXHbB4oiSmQ_vlN5pghppm_1yIcgN0UoiTvAhYpSslQ6BtPBDdZi3nRVr9lymd7omsBh8cWE5ayE10cRhRV1IG4x_2GtaTV-Apd-GYcYdmtDeYMeDc75BKLkb6kvDc8ylTo6JOowXZyoFP8UUCz7O5Xu-HrRk7WqOsGtn8e_zftCBl33Dng6xjif4Pxf2zq4cPkU6s9EYgWN7hc4m86ursatpIS0Acuxhvunyd0xMUrEHJB3Ns4UXbwNaHYo9dFM5ZLlFSOELKqzq3XABJu7AZPUEIMDN66lJbmpc4zDruqlroP3vSL2lN7wRSP4GxPuE1y2ANb1bwyTkEML4P4XM6jLTxG_JohrEXd2dLkKdXSuq2sAM6wsl4b8zx6KHFRyBvetocKeXQbF3b4yiQ1-osWsqW-37hdKURfH8IGHUolQcjmLf9NneGJBUu7vv2QBjXSxSHByxAR7GFv9_946ehR_saag-K9WfGkxh3ej_SBeG3hV_ksZCMsz08Wh2jHjGxa9awZXeq0P1S3q4nc-Pls7j3skAFr3_FqKNHeF-Vfo8iCpYSJ9zXdpKr3KFaP2V4WZXJcf9aMe2-lt9pUX_CpPzwWLmDQwSFBSPAkhIV_jyKQFvTG6BIQI0sQR8MRcIkidlJeeSuABJ98yvNIhuXCV-iCSQoI6cPu7KTZoxUrn_s1NFMSrFdw=w1556-h610-s-no-gm?authuser=0" alt="grocerylist screenshot" />
+        <a href="projectsforportfolio/grocerylist.html">project2.org</a>
       </div>
 
       <div id="content3" class="main3">
-        <h1>PROJECT 3</h1>
+        <h1>SECURE THE VAULT</h1>
 
         <p>
           Brief description goes here about my project and how amazing it was
           and how quick and efficiant I was to make it.
         </p>
-        <!--note to self - make sure to fill in with an actual screenshot-->
-        <img src="screenshot" alt="project1 screenshot" />
-        <a href="linktomywebsite.org">project1.org</a>
+        
+        <img src="https://lh3.googleusercontent.com/pw/ADCreHcuzdXmAemKLmHHmq4QYLclxsmV_Uhu7F_ZQvh-Igp2FBjMWUUyXM2YiFoZcOm2r8_OEWLaebx6S54GXVnsGQpTGCTZdbg8RQ2eXq2WVhUqCY8QHGXxPMn5VMfdsIDbOJAOEQWam1ADY90OLQA_az0Ch_BdSmCnqElovk8G1Zq27u3106agSdSk8oOLdPpBrQwIQJJcGeSiB7BB5m4GwqXsmfhjgRUnlQsNxsjBgFq0L0jk308phQ9ugfFWcJeDW7s5-60tgx9EVOfYl5hmohqLxbJoxprWR--qs9QOcUHOhW-W_4c69B6FrT7ZsK6-ExqMk7KxXa1K_U9E_cCVExTZzMaaZjMzyJUKtB-sVchu3a7WUujbfcHBgrPU5MC6CRxBuNVtTusgQ4UvnRKWb-mwpRpQq-JvMlpitgVQz7SSHsiSNEmSscoHQ6ZIAqnhIM1RSV8OTWt96iuR_OnP4TF1mo0P3RpfyMZQsw8x3jwjjEuDNHyiiMrca8S_cULXN236y5QVP9ynD1jXzeEP9LyI6hU2BS3h1DCP3TskY-8Y8i1943Z--IL5kDyF2w16q24hMtvTbJgM4QuKPks9nDsJhN4eofw5ukJ64bBsyVe0XTEw7b01F9av0G7kiL_sQL2kNboqI9EaS0Yw3pIdlJ3rK1Nr7R7iCI9Rb34mR1TcttZkkkunJFyRkJrMnaMPJ69Uu7Z5e41og8Tz1jPmQTa0uoM7SLfGfsliEIb-1ZvBKCpi5R0v8MC6nJaVJfo7bRgiBpRPX0FqFXdrzcuky_a4PvPDOgTNAROOsMS7-bSMctLlwCEg0Ld04zD7t5UZXoc6KI-mnPTJFURB8miU-OJ4xdIDm7n6G01pXrqjMMtL733x5qo4P_doDiVi70Uq-PXPquveZBqxdo_oTdz2tBzq63g=w1875-h758-s-no-gm?authuser=0" alt="vault screenshot" />
+        <a href="projectsforportfolio/vault.html"><br>project3.org</a>
       </div>
 
       <div id="content4" class="main4">
-        <h1>PROJECT 4</h1>
+        <h1>ABSTRACT ARTWORK</h1>
 
         <p>
           Brief description goes here about my project and how amazing it was
           and how quick and efficiant I was to make it.
         </p>
         <!--note to self - make sure to fill in with an actual screenshot-->
-        <img src="screenshot" alt="project1 screenshot" />
-        <a href="linktomywebsite.org">project1.org</a>
+        <img src="https://lh3.googleusercontent.com/pw/ADCreHdcCNwtlGQYG_xT6avd2Np_feLn-5WL2aqHOA_3tVJrqhjt-epDYIMD9WlhMhU4mHXTiTHsvchLzD0Mafvn8cYpNvuplW_X_lElX0nJPc5ChmRHr-8ZrkjdjAH91NSgdGYUOI8tAtxkAfquflITillzvZt79MF3eBUY4d_H4bHykEFfUjTRxoE4N860wusBLlsIWszDkAdUpSGvdsQgj_uv-ioruWbrztMrakPvUOTFliVhPo7E--HGmu9D6IeLsqqmaYCta25LP2KUMuRKC5JQ221GGBAa90nkFMGo2Y-7Ajk3OvWe0Ws-VqhAIGYQnQI0_jZT4t6Lk-sqpokBxpLafNREDKe9hM7pf1XzJAXqvkR-o5uaLztDtXFe9Krsxn4NAP944_aM5RkGjbwKzQ7hUUcENZnyzpEBKzDX_8zKEZvRB2Ml1Graso4fN2ozdybB0Lc833oYpf2_eZ2a8TVM4E2l6K17JOF3pY7O4fUBU-84So2DZ-CHw4Ks0bZVw0q2hDwHRTTeGAIrqL9zpE4PxPwxvzFhjVqURIXyHFOBuEBaaGPFYW3RPG2xswU3_J1X_669Wq8I83H6S6j53gLU2jOlMpWa6fJ9AmH8P5LZIJjK6HJhljRGE9YJCk7OdYNLtgGBwpuIP9J6Gc8Hfz4ATszaUm70iimgpewtqsV_j6iPE29GVJJAX-VaRhxGPzug4yaPl9mRujTf-yNZbDrsjzgMmgaCMJEOBaU-YGO4K_ryoymfww6OmO95scDqnyBY1qHWeZLZyiOOyJ7x0Vi4O2xWWvmYwW3mXOm665vFBUGHVB7598XtTjQKdFqNBElUb7t1CN9ReDNUMO9PykY6vzx-3xyL8D3CatRm4Q1rHC7MgBEv4EMKUz7t8cDATFaOK9UQCYKmn8gdm23Fv6o3XPA=w1828-h784-s-no-gm?authuser=0" alt="picassoproject screenshot" />
+        <a href="projectsforportfolio/picassopainting.html">project4.org</a>
       </div>
     </div>
-
+    <div class="bottomnav">
+      <ul>
+        <li>
+          <a href="#content1"><strong>PROJECT 1</strong></a>
+        </li>
+        <li>
+          <a href="#content2"><strong>PROJECT 2</strong></a>
+        </li>
+        <li>
+          <a href="#content3"><strong>PROJECT 3</strong></a>
+        </li>
+        <li>
+          <a href="#content4"><strong>PROJECT 4</strong></a>
+        </li>
+      </ul>
+    </div>
     <footer>
-      <div>
-        <ul>
-          <li>
-            <a href="#content1"><strong>PROJECT1</strong></a>
-          </li>
-          <li>
-            <a href="#content2"><strong>PROJECT2</strong></a>
-          </li>
-          <li>
-            <a href="#content3"><strong>PROJECT3</strong></a>
-          </li>
-          <li>
-            <a href="#content4"><strong>PROJECT4</strong></a>
-          </li>
-        </ul>
-      </div>
-      <p><strong>LUCON PROGRAMMING</strong></p>
+     
+      <p>EST. 2023 <strong>LUCON PROGRAMMING</strong> Professional Web Development aimed at delivering enticing websites</p>
     </footer>
   </body>
 </html>
