--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
   or I gotta make this <div class="main"> a grid to encompass the entire page but centered so that when I z-index the header and footer it will be on top of this section-->
 
     <div id="hiddenContent" class="grid-container">
+      <div class="intro">
+        
+      </div>
       <div id="content1" class="main1">
         <h1>INSPIRE WITH ME</h1>
         <h3>Let's Make A Difference</h3>
